# html-utils

./: .gitignore  README.md  pyproject.toml
html-utils/: html_utils.py
html_utils/: __init__.py  html_exceptions.py
