[tool.poetry]
name = "html-utils"
version = "0.1.0"
description = ""
authors = ["taimast <fedorov0av@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"